--- a/style.css
+++ b/style.css
@@ -364,7 +364,8 @@ a:hover {
 
 .bg-modif {
     background-color: rgba(49, 42, 28, 1);
-    margin:  0 250px;
+    /* max-width: 500px; */
+    margin:  0 25px;
     padding: 20px 0;
 }
 
